@@ -1,5 +1,6 @@
 Changes in <next version>:
  * Fix colormap sequence and randomize plugins
+ * Change hyphen to minus sign when using standard C formatting in tick labels
 
 Changes in 2.1.1:
  * Fix dashed/dotted custom lines in EMF output
